# EstatiCar

./: .dockerignore  .env.example  .gitignore  Containerfile  DOCKER_README.md  Dockerfile  README.md  docker-health-check.ps1  docker-setup.ps1  docker-setup.sh  pyproject.toml  ref.txt
app/: compose-dev.yml  compose.yml  main.py  test_flet.py
app/Assets/: manifest.json
app/build_assets/json/: databasepath.json
app/domain/entities/: __init__.py  credentials.py  query_result.py
app/domain/ports/: __init__.py  ai_model_port.py  config_port.py  database_port.py  file_port.py
app/domain/use_cases/: __init__.py  ask_question.py  delete_training_data.py  export_result.py  train_model.py
app/infrastructure/adapters/: __init__.py  download_server.py  file_adapter.py  ollama_adapter.py  sqlite_adapter.py
app/infrastructure/config/: config_adapter.py  path_resolver.py
app/infrastructure/config/json/: databasepath.json
app/infrastructure/config/json/db/: app_data_base.db
app/presentation/components/: data_table.py  dropdown_menu.py  error_dialog.py  footer_images.py  progress_dialog.py
app/presentation/controllers/: download_controller.py  question_controller.py  training_controller.py
app/presentation/state/: app_state.py
app/presentation/theme/: theme_config.py
app/presentation/views/: card_content_view.py  column_filter_view.py  download_button_view.py  footer_view.py  input_field_view.py  query_content_view.py  tabs_view.py  train_button_view.py
docs/: index.html
src/: build.spec  main.py
src/app/: build.spec  docker-compose.yml  main.py
src/app/Components/: DropDownComponentMenu.py  data_table.py  errors_app.py  footer_components.py  progress_dialog.py
src/app/Controller/: download_table.py  load_credentials.py  load_path.py  process_data_table.py  save_excel.py  set_question.py
src/app/Controller/db/: app_data_base.db
src/app/Controller/json/: credentials.json  databasepath.json
src/app/Services/: database_config.py  ollama_service.py  qdrant_client.py  start_qdrant_linux.py  start_qdrant_windows.py  vanna_service.py
src/app/Themes/: themes_data.py
src/app/Utils/: deleteTrainData.py
src/app/View/: card_content_view.py  column_filter_view.py  download_table_button.py  footer_view.py  input_field_view.py  options_columns_view.py  query_content_view.py  tabs_view.py  test_input_field_view.py  train_button.py
src/app/utils/: app_state.py  choice.py  deleteTrainData.py
src/tests/: test_save_excel.py
