[project]
name = "flechasql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anthropic==0.52.0",
    "anyio==4.7.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "binaryornot==0.4.4",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2024.12.14",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.2",
    "cookiecutter==2.6.0",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.0",
    "executing==2.1.0",
    "fastembed==0.7.0",
    "filelock==3.18.0",
    "flasgger==0.9.7.1",
    "flask==3.1.0",
    "flask-sock==0.7.0",
    "flatbuffers==25.2.10",
    "flet==0.25.2",
    "flet-cli==0.25.2",
    "flet-desktop==0.25.2",
    "fsspec==2025.5.1",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.1",
    "google-api-python-client==2.161.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-cloud-aiplatform==1.81.0",
    "google-cloud-bigquery==3.29.0",
    "google-cloud-core==2.4.2",
    "google-cloud-resource-manager==1.14.1",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.6.0",
    "google-generativeai==0.8.4",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.68.0",
    "greenlet==3.1.1",
    "grpc-google-iam-v1==0.14.0",
    "grpcio==1.70.0",
    "grpcio-status==1.70.0",
    "h11==0.14.0",
    "h2==4.2.0",
    "hf-xet==1.1.2",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "huggingface-hub==0.32.2",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jiter==0.10.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kaleido==0.2.1",
    "loguru==0.7.3",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marqo==3.13.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.0",
    "oauthlib==3.2.2",
    "ollama==0.4.7",
    "onnxruntime==1.22.0",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pefile==2023.2.7",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "pluggy==1.6.0",
    "portalocker==2.10.1",
    "prompt-toolkit==3.0.48",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-rust-stemmers==0.1.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.18.0",
    "pyinstaller==6.11.1",
    "pyinstaller-hooks-contrib==2024.10",
    "pyparsing==3.2.1",
    "pypng==0.20220715.0",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "qdrant-client==1.14.2",
    "qrcode==7.4.2",
    "referencing==0.35.1",
    "repath==0.9.0",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "rsa==4.9",
    "scipy>=1.15.3",
    "shapely==2.0.7",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "stdeb==0.11.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "text-unidecode==1.3",
    "tokenizers==0.21.1",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "vanna==0.7.9",
    "watchdog==4.0.2",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
]
