[project]
name = "flechasql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.26.0,<0.27.0",
    "flet-web>=0.26.0,<0.27.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "vanna[ollama]>=0.7.0,<1.0.0",
    "qdrant-client>=1.16.0",
    "ollama>=0.4.0",
    "sqlalchemy>=2.0.0",
]
